[package]
name = "flcq_serial"
version = "0.1.0"
authors = ["arsenal007 <fc_arsenal@ukr.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
version = "3.*.*"
serialport = { git = "https://gitlab.com/susurrus/serialport-rs" }
clap = "*"
conrod = { version = "0.61.1", features = ["glium", "winit"] }
find_folder="0.3.0"
dirs = "2.0"
#[dependencies.gtk]
#version = "0.8.1"
#features = ["v3_16"]

#[dependencies.gio]
#version = ""
#features = ["v2_44"]

